--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": ["source.fixAll.eslint"],
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "vue"],
-  "svg.preview.background": "transparent"
+  "svg.preview.background": "transparent",
+  "[svg]": {
+    "editor.defaultFormatter": "jock.svg"
+  }
 }
