--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0",
     "eslint-webpack-plugin": "^2.4.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "quasar-app-extension-ide-helper": "^1.0.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
